# dream-atlas

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dream-atlas.ui  icosphere.c  icosphere.h  language.py  main.c  map.py  map_gen.c  map_gen.h  test.ui
src/: cartography.c  cartography.h  icosphere.c  icosphere.h  main.c  world.c  world.h
